[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[features]
ui-gpui = ["auto-lang/ui-gpui"]
ui-iced = ["auto-lang/ui-iced"]
default = ["ui-iced", "auto-lang/default"]

[dependencies]
auto-lang.workspace = true
serde_json.workspace = true
ureq.workspace = true
tokio.workspace = true
iced.workspace = true
