[package]
name = "cli-app-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# No external dependencies — this oracle is pure std, mirroring the Auto
# implementation which uses no external library. This is the whole point of
# the cli_app use case: exercising a2r's "pure Rust output" path.

# Standalone crate: keep out of the parity workspace so `cargo test` works
# from this directory without modifying the parent workspace manifest.
[workspace]
