[package]
name = "rusqlite-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "=0.31.0", features = ["bundled"] }

# Standalone crate: keep out of the parity workspace so `cargo test` works
# from this directory without modifying the parent workspace manifest.
[workspace]
